# Dual_ur5e_configuration

./: README.md  READme  grasp_box.sdf  move_group action client interface
.github/workflows/: ros2_ci.yml
collision_avoidance_packages/src/add_collision_objects/: CMakeLists.txt  package.xml
collision_avoidance_packages/src/add_collision_objects/launch/: add_collision_objects.launch.py  attach_detach.launch.py  collision_pipe_attach_detach.launch.py
collision_avoidance_packages/src/add_collision_objects/src/: add_collision_objects.cpp  attach_detach.cpp  collision_pipe_attach_detach.cpp
collision_avoidance_packages/src/bim_object_sequencer/: README.md  package.xml  setup.cfg  setup.py
collision_avoidance_packages/src/bim_object_sequencer/bim_object_sequencer/: attached_base.py  sequencer.py  spawner.py
collision_avoidance_packages/src/bim_object_sequencer/launch/: sequencer.launch.py
collision_avoidance_packages/src/bim_object_sequencer/resource/: MontageSequenz_Gesamt.json
collision_avoidance_packages/src/robot_collision_avoidance/: package.xml
collision_avoidance_packages/src/robot_collision_avoidance/launch/: robot_collision_avoidance.launch.py  robot_collision_avoidance_for_attach_detach.launch.py
dual_ur5e_simulation/src/dual_robot_combined_description/: CMakeLists.txt  package.xml
dual_ur5e_simulation/src/dual_robot_combined_description/config/: dual_robot_combined_controller.yaml
dual_ur5e_simulation/src/dual_robot_combined_description/launch/: combined_display.launch.py  combined_gazebo.launch.py  dual_robot_combined_simulation.launch.py
dual_ur5e_simulation/src/dual_robot_combined_description/rviz/: dual_robots_combined.rviz
dual_ur5e_simulation/src/dual_robot_combined_description/urdf/: dual_robots_config.urdf.xacro  robot_with_gripper.urdf.xacro
dual_ur5e_simulation/src/dual_robot_combined_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dual_ur5e_simulation/src/dual_robot_combined_moveit_config/config/: dual_robots_config.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
dual_ur5e_simulation/src/dual_robot_combined_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
single_ur5e_simulation/src/collision_object_manager/: CMakeLists.txt  package.xml
single_ur5e_simulation/src/collision_object_manager/launch/: collision_object_manager.launch.py  collision_pipe_attach_detach.launch.py
single_ur5e_simulation/src/collision_object_manager/src/: collision_object_manager.cpp  collision_pipe_attach_detach.cpp
single_ur5e_simulation/src/robot_collision_avoidance/: CMakeLists.txt
single_ur5e_simulation/src/robot_controller/: CMakeLists.txt  READme  package.xml
single_ur5e_simulation/src/robot_controller/config/: robot_controllers.yaml
single_ur5e_simulation/src/robot_controller/launch/: robot_controller.launch.py
single_ur5e_simulation/src/robot_description/: CMakeLists.txt  README.md  package.xml
single_ur5e_simulation/src/robot_description/launch/: display.launch.py  gazebo.launch.py
single_ur5e_simulation/src/robot_description/rviz/: display.rviz
single_ur5e_simulation/src/robot_description/urdf/: robot.urdf.xacro  ur5e.urdf
single_ur5e_simulation/src/robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
single_ur5e_simulation/src/robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ur5e.srdf
single_ur5e_simulation/src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
single_ur5e_simulation/src/robot_moveit_config/src/: cartesian_path_planner_node.cpp  test_trajectory.cpp
single_ur5e_simulation/src/robot_path_planning/: CMakeLists.txt  README.md  package.xml
single_ur5e_simulation/src/robot_path_planning/launch/: Robot_with_gripper.launch.py  Static_single_thread_executor.launch.py  pick_and_place.launch.py  pick_and_place_with_publisher.launch.py  pick_and_place_with_publisher_for_attach_detach.launch.py  robot_with_gripper_feedback.launch.py  test_trajectory.launch.py  ur5e_complete_pick_and_place.launch.py
single_ur5e_simulation/src/robot_path_planning/src/: Multi_thread_executor.cpp  Robot_with_gripper.cpp  Static_Single_thread_executor.cpp  hello_moveit.cpp  pick_and_place.cpp  pick_and_place_with_publisher.cpp  pick_and_place_with_publisher_for_attach_detach.cpp  robot_with_gripper_feedback.cpp  ur5e_complete_pick_and_place.cpp
single_ur5e_simulation/src/robot_simulation_launch/: CMakeLists.txt  package.xml
single_ur5e_simulation/src/robot_simulation_launch/launch/: robot_simulation.launch.py
single_ur5e_simulation/src/robot_simulation_launch/worlds/: custom_world.sdf
