<?xml version="1.0"?>
<package format="3">
  <name>robot_collision_avoidance</name>
  <version>0.1.0</version>
  <description>A package for robot collision avoidance launch files</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>